apps/overlays/wgportal/deployment-patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wgportal
spec:
  template:
    spec:
      priorityClassName: system-cluster-critical
